--- a/PrisApi/PrisApi.csproj
+++ b/PrisApi/PrisApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>ebfeb050-74aa-418e-b627-7735ee9ef4ac</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
