--- a/PrisApi/appsettings.json
+++ b/PrisApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=StorePriceDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=.;Database=StorePriceDb;User Id=;Password=;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
