feat: Implement Discord notification for product price changes
- Added Discord webhook integration to notify about price changes.
- Created ProductPriceChange model to structure price change data.
- Implemented IDiscordService interface and DiscordService class for sending notifications.
- Updated ProductRepository to send price change notifications after saving products.
- Modified WillysScraperController to filter scraping jobs based on store location.
- Enhanced error handling in ResponseHelper to account for empty job lists.
- Updated scraping logic in various services to improve data handling and parsing.
- Adjusted appsettings for Discord webhook configuration.
- Improved logging and debugging information throughout the scraping process.

--- a/PrisApi/appsettings.json
+++ b/PrisApi/appsettings.json
@@ -2,11 +2,24 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=StorePriceDb;User Id=;Password=;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
+  "Discord":  {
+    "WebhookUrl": "REPLACE_WITH_HOOK"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
     }
+  }
   },
   "AllowedHosts": "*"
 }
